--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+# Ignore model (> 100MB)
+classifierdata/model.pt
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
